<resources>
    <string name="app_name">ScanSmart</string>
    <string name="email" translatable="false">e-mail: jimakosrp@gmail.com</string>
    <string name="about_second">There is no paid version of the app or any extra features to buy. It also has no ads. If you want to support me, you can do it here:</string>
    <string name="donate" translatable="false">https://paypal.me/dimitrisripis</string>
    <string name="copyrights" translatable="false">©2020 ScanSmart is created by Dimitris Ripis. All rights reserved.</string>
    <string name="about_first">ScanSmart is a free application that scans barcodes (including Wifi barcodes) and extracts information from photos. I would appreciate it if you could send suggestions or report to me any problems you had using it.</string>
    <string name="textgrid">What do you want to scan?</string>
    <string name="option1">QR or Barcode</string>
    <string name="option2">Phone or E-mail</string>
    <string name="option3">WiFi Connect</string>
    <string name="option4">Copy Text</string>
    <string name="exit">Press back again to exit</string>
    <string name="permok">Permissions granted!</string>
    <string name="permask">It is required to grant all permissions.</string>
    <string name="wifi1">With QR Code</string>
    <string name="wifi2">With photo of password</string>
    <string name="aboutbutton">About</string>
    <string name="result">Result</string>
    <string name="call">Call</string>
    <string name="sendemail">Send Email</string>
    <string name="rescan">Re-Scan</string>
    <string name="passwordfound">Password found:</string>
    <string name="copy">Copy</string>
    <string name="selwifi">Select WiFi to connect</string>
    <string name="notphone">This is not a phone number..</string>
    <string name="notemail">This is not an email address..</string>
    <string name="error">Error</string>
    <string name="notphoneemail">No phone or email found..</string>
    <string name="conntry">Trying to connect..</string>
    <string name="connect">Connect to </string>
    <string name="cancel">Cancel</string>
    <string name="notwifi">This is not a WiFi code..</string>
    <string name="question1">Do you want to visit this website?</string>
    <string name="visit">Visit</string>
    <string name="searchweb">Search the web</string>
    <string name="enablewifi">WiFi is disabled. You need to enable it.</string>
    <string name="copypassword">Copied Password : </string>
    <string name="try1">Trying to use </string>
    <string name="try2"> to connect to </string>
    <string name="textcopy">Text Copied</string>

</resources>
