<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/roundstyle"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">
        <ImageView
            android:id="@+id/selectQr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_first"
        android:textSize="22sp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_second"
        android:textSize="22sp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        android:textSize="25sp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyrights"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:padding="5dp"/>

</LinearLayout>